<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_poster"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Poster Film"
            android:scaleType="centerCrop"
            tools:src="@drawable/poster_a_start_is_born" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toTopOf="@+id/cv_poster"
        tools:text="Avengers Film" />

    <LinearLayout
        android:id="@+id/ll_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/gray_rect"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="3dp"
        android:paddingRight="8dp"
        android:paddingBottom="3dp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="Tanggal Rilis Film"
            android:src="@drawable/ic_date"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="01 January 2019" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/gray_rect"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="3dp"
        android:paddingRight="8dp"
        android:paddingBottom="3dp"
        app:layout_constraintStart_toStartOf="@+id/ll_release_date"
        app:layout_constraintTop_toBottomOf="@+id/ll_release_date">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="Penilaian Film"
            android:src="@drawable/ic_star"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            tools:text="7.1" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/cv_poster"
        android:background="@drawable/gray_rect"
        android:paddingLeft="8dp"
        android:paddingTop="3dp"
        android:paddingRight="8dp"
        android:paddingBottom="3dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ll_rating"
        app:layout_constraintStart_toEndOf="@+id/ll_rating"
        app:layout_constraintTop_toTopOf="@+id/ll_rating"
        tools:text="English" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Pratinjau"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_poster" />

    <TextView
        android:id="@+id/tv_overview_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_overview"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>